# muvapack

./: .gitignore  LICENSE  README.md  pyproject.toml
src/muvapack/: __init__.py  fa.py  glm.py  testing.py  tree.py
tests/: test_fa.py  test_glm.py
